# formulator

./: .buildinfo  .gitignore  CHANGELOG.rst  LICENSE  README.rst  data.yaml  demo.py  demo.yaml  index.html  millenium-falcon.yaml  objects.inv  pyproject.toml  retro-2.yaml  retro.py  searchindex.js  textual-widgets-overview.md
.github/workflows/: action.yml
_sources/: index.rst.txt
about/: index.html
changelog/: index.html
connect/: index.html
demos/: demo.py  demo.yaml  flux-capacitor.yaml  index.html  retro-2.yaml  retro-3.yaml  retro.yaml  retro_encabulator.py
demos/demo/: index.html
docs/: .buildinfo  index.html  objects.inv  searchindex.js
docs/_sources/: index.rst.txt
docs/genindex/: index.html
docs/log/: atom.xml  index.html
docs/log/drafts/: index.html
docs/search/: index.html
docsrc/: changelog.rst  conf.py  intro.rst
docsrc/log/23.144-065120/: index.rst
docsrc/modules/: index.rst
genindex/: index.html
glossary/: index.html
intro/: index.html
log/: atom.xml  index.html
log/2023/: index.html
log/23.144-065120/: index.html
log/archive/: index.html
log/drafts/: index.html
logs/: index.html
mission/: index.html
modules/: index.html
py-modindex/: index.html
refs/: index.html
search/: index.html
src/: form.css  form.py  form.yaml
src/photon_platform/formulator/: __init__.py  app.py  composer.py  formulator.css  formulator.py  formulator_modal.py  modal.py  prompt.md  prompt.sh  prompt_intro.md  validator.py
todos/: index.html
usage/: index.html
