[project]
name = "photon-platform-formulator"
dynamic = ["version"]
authors = [
  { name="phi ARCHITECT", email="github@phiarchitect.com" },
]
description = "create and manage log entries for a python project"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "textual",
    "rich",
    "jinja2",
]

[project.scripts]
formulator = "photon_platform.formulator.app:run"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["photon_platform"]
namespaces = true

[tool.setuptools.dynamic]
version = {attr = "photon_platform.formulator.__version__"}

[project.urls]
"Homepage" = "https://github.com/photon-platform/formulator"
"Bug Tracker" = "https://github.com/photon-platform/formulator/issues"
